<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.camel-tooling</groupId>
	<artifactId>camel-lsp-server</artifactId>
	<version>1.19.0-SNAPSHOT</version>
	
	<name>Camel Language Server Protocol :: Server Implementation</name>
	<description>Server Implementation of the Language Server Protocol for Apache Camel</description>
	<url>https://github.com/camel-tooling/camel-language-server</url>
	
	<licenses>
	    	<license>
			<name>The Apache License, Version 2.0</name>
    			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
	    	</license>
	</licenses>

	<scm>
  		<connection>scm:git:https://github.com/camel-tooling/camel-language-server.git</connection>
  		<developerConnection>scm:git:https://github.com/camel-tooling/camel-language-server.git</developerConnection>
  		<url>https://github.com/camel-tooling/camel-language-server</url>
	</scm>

	<developers>
    	<developer>
      		<name>Aurelien Pupier</name>
      		<email>aurelien.pupier@gmail.com</email>
      		<organization>Red Hat</organization>
      		<organizationUrl>https://www.redhat.com</organizationUrl>
    	</developer>
    	<developer>
      		<name>Lars Heinemann</name>
      		<email>lhein.smx@gmail.com</email>
      		<organization>Red Hat</organization>
      		<organizationUrl>https://www.redhat.com</organizationUrl>
    	</developer>
  	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>17</maven.compiler.release>
		<jacoco.version>0.8.11</jacoco.version>
		<lsp4j.version>0.22.0</lsp4j.version>
		<slf4j.version>1.7.36</slf4j.version>
		<log4j-slf4j.version>2.22.1</log4j-slf4j.version>
		<junit.version>5.10.2</junit.version>
		<assertj.version>3.25.3</assertj.version>
		<jgit.version>6.9.0.202403050737-r</jgit.version>
		<camel.version>4.4.1</camel.version>
		<camel.kamelet.catalog.version>4.4.0</camel.kamelet.catalog.version>
		<camel.quarkus.version>3.8.1</camel.quarkus.version>
		<roaster.version>2.29.0.Final</roaster.version>
		<awaitility.version>4.2.1</awaitility.version>
		<tyrus.version>2.1.5</tyrus.version>
		<commons-text.version>1.11.0</commons-text.version>
		<citrus.kafka.version>4.1.1</citrus.kafka.version>
		<kafka.clients.version>3.6.1</kafka.clients.version>
		<kubernetes.client.version>6.10.0</kubernetes.client.version>
	</properties>

	<distributionManagement>
  		<snapshotRepository>
    		<id>ossrh</id>
    		<url>https://oss.sonatype.org/content/repositories/snapshots</url>
  		</snapshotRepository>
	</distributionManagement>

	<profiles>
		
		<!-- GPG -->
		<profile>
			<id>sign</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.1</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<!-- build sources and javadoc -->
		<profile>
			<id>build-extras</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<!-- provide sources -->
		    		<plugin>
		      			<groupId>org.apache.maven.plugins</groupId>
		      			<artifactId>maven-source-plugin</artifactId>
		      			<version>3.3.0</version>
		      			<executions>
		        			<execution>
		          				<id>attach-sources</id>
		          				<goals>
		            				<goal>jar-no-fork</goal>
		          				</goals>
		        			</execution>
		      			</executions>
		    		</plugin>
		    		
		    		<!-- provide javadoc -->
		    		<plugin>
		      			<groupId>org.apache.maven.plugins</groupId>
		      			<artifactId>maven-javadoc-plugin</artifactId>
		      			<version>3.6.3</version>
		      			<executions>
		        			<execution>
		          				<id>attach-javadocs</id>
		          				<goals>
		            				<goal>jar</goal>
		          				</goals>
		        			</execution>
		      			</executions>
		    		</plugin>
		    		
					<plugin>
						<groupId>org.cyclonedx</groupId>
						<artifactId>cyclonedx-maven-plugin</artifactId>
						<version>2.7.11</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>makeAggregateBom</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<!-- deployment to Central -->
			<plugin>
      			<groupId>org.sonatype.plugins</groupId>
      			<artifactId>nexus-staging-maven-plugin</artifactId>
      			<version>1.6.13</version>
      			<extensions>true</extensions>
      			<configuration>
        			<serverId>ossrh</serverId>
        			<nexusUrl>https://oss.sonatype.org/</nexusUrl>
        			<autoReleaseAfterClose>true</autoReleaseAfterClose>
      			</configuration>
    		</plugin>			
			<!-- SureFire -->
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
			</plugin>
			
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>3.2.3</version>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.13.0</version>
					<configuration>
						<compilerArgs>
							<arg>-Werror</arg>
						</compilerArgs>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.eclipse.lsp4j</groupId>
			<artifactId>org.eclipse.lsp4j.jsonrpc</artifactId>
			<version>${lsp4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.lsp4j</groupId>
			<artifactId>org.eclipse.lsp4j.websocket.jakarta</artifactId>
			<version>${lsp4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.lsp4j</groupId>
			<artifactId>org.eclipse.lsp4j</artifactId>
			<version>${lsp4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>${log4j-slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-catalog</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-catalog-maven</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel.kamelets</groupId>
			<artifactId>camel-kamelets-catalog</artifactId>
			<version>${camel.kamelet.catalog.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel.karaf</groupId>
			<artifactId>camel-catalog-provider-karaf</artifactId>
			<version>3.22.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel.springboot</groupId>
			<artifactId>camel-catalog-provider-springboot</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel.quarkus</groupId>
			<artifactId>camel-quarkus-catalog</artifactId>
			<version>${camel.quarkus.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-route-parser</artifactId>
			<version>${camel.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>${assertj.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jgit</groupId>
			<artifactId>org.eclipse.jgit</artifactId>
			<version>${jgit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jgit</groupId>
			<artifactId>org.eclipse.jgit.ssh.apache</artifactId>
			<version>${jgit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.forge.roaster</groupId>
			<artifactId>roaster-jdt</artifactId>
			<version>${roaster.version}</version>
		</dependency>
		<dependency>
			<groupId>org.awaitility</groupId>
			<artifactId>awaitility</artifactId>
			<version>${awaitility.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>2.2</version>            
		</dependency>
		<dependency>
			<groupId>org.glassfish.tyrus</groupId>
			<artifactId>tyrus-server</artifactId>
			<version>${tyrus.version}</version>
		</dependency>
		<dependency>
  			<groupId>org.glassfish.tyrus</groupId>
			<artifactId>tyrus-container-grizzly-server</artifactId>
			<version>${tyrus.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>${commons-text.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.kafka</groupId>
			<artifactId>kafka-clients</artifactId>
			<version>${kafka.clients.version}</version>
		</dependency>
		<dependency>
			<groupId>org.citrusframework</groupId>
			<artifactId>citrus-kafka</artifactId>
			<version>${citrus.kafka.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.fabric8</groupId>
			<artifactId>kubernetes-client</artifactId>
			<version>${kubernetes.client.version}</version>
		</dependency>
		<dependency>
			<groupId>io.fabric8</groupId>
			<artifactId>kubernetes-model-common</artifactId>
			<version>${kubernetes.client.version}</version>
		</dependency>
		<dependency>
			<groupId>io.fabric8</groupId>
			<artifactId>knative-client</artifactId>
			<version>${kubernetes.client.version}</version>
		</dependency>
		<dependency>
			<groupId>io.fabric8</groupId>
			<artifactId>kubernetes-server-mock</artifactId>
			<version>${kubernetes.client.version}</version>
			<scope>test</scope>

		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>jakarta.websocket</groupId>
				<artifactId>jakarta.websocket-api</artifactId>
				<version>2.1.1</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
